--- a/style/style.css
+++ b/style/style.css
@@ -1,40 +1,204 @@
-*{
+@import url('https://fonts.googleapis.com/css2?family=Golos+Text:wght@400..900&family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+
+* {
     box-sizing: border-box;
+    font-family: Roboto, sans-serif;
+    line-height: normal;
+    font-style: normal;
 }
-body{
+button,a {
+    cursor: pointer;
+}
+
+body {
     margin: 0;
     padding: 0;
 }
-.header{
-    height: 124px;
+
+main {
+    flex-grow: 1;
+    background: linear-gradient(180deg, rgba(245, 245, 245, 0) 1.04%, #F5F5F5 100%);
 }
-.container{
+
+.page-wrapper {
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+}
+
+.container {
+    width: 100%;
+    height: 100%;
     max-width: 1230px;
     margin: 0 auto;
-    padding-left: 15px;
-    padding-right: 15px;
-    height: 100%;
+    padding: 0 15px;
 }
-.header-box{
+
+.btn {
+    display: flex;
+    padding: 8px 16px;
+    align-items: center;
+    gap: 4px;
+    outline: none;
+}
+
+.btn-primary {
+    border-radius: 2px;
+    background: #1890FF;
+    border: 1px solid #1890FF;
+    color: #FFF;
+}
+
+.btn-outline {
+    border-radius: 2px;
+    border: 1px solid #D9D9D9;
+    background: #FFF;
+    color: #595959;
+}
+
+.logo {
+    max-width: 100px;
+}
+
+.logo img {
     width: 100%;
-    height: 100%;
+}
+
+.header {
     display: flex;
     align-items: center;
-    justify-content:space-between;
+    min-height: 124px;
+
 }
-.footer{
-    height: 156px;
-}
-.footer-box{
-    width: 100%;
+
+.header-box {
     height: 100%;
     display: flex;
+    justify-content: space-between;
     align-items: center;
-    justify-content:space-between;
 }
-.footer-nav{
+
+.header-controls {
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    gap: 10px;
+}
+
+.footer {
+    display: flex;
+    align-items: center;
+    min-height: 156px;
+    padding: 60px 0;
+}
+
+.footer-box {
+    height: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 36px;
+    flex-wrap: wrap;
+}
+
+.footer-nav {
     flex-grow: 1;
 }
-.logo{
-    width: 100px;
+
+.footer-nav ul {
+    display: flex;
+    align-items: center;
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    gap: 15px;
+    flex-wrap: wrap;
+}
+
+.footer-nav ul li {
+    font-size: 18px;
+    font-weight: 400;
+    color: rgba(89, 89, 89, 1);
+}
+
+.footer-social {
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    gap: 20px;
+}
+
+.banner {
+    margin-bottom: 56px;
+}
+
+.banner-item {
+    background-image: url(../src/img/banner/banner.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center right;
+    padding: 68px;
+    border-radius: 10px;
+}
+
+.banner-item--title {
+    color: rgba(48, 44, 52, 1);
+    font-size: 39px;
+    font-weight: 700;
+    max-width: 50%;
+    margin-top: 0;
+    margin-bottom: 15px;
+}
+
+.banner-item--subtitle {
+    color: rgba(48, 44, 52, 1);
+    font-size: 24px;
+    font-weight: 400;
+    max-width: 50%;
+    margin: 0;
+}
+
+.products-header {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.products-header--title {
+    color: rgba(0, 0, 0, 1);
+    font-size: 36px;
+    font-weight: 700;
+}
+
+.products-header-search {
+    min-width: 306px;
+    height: 34px;
+    flex-shrink: 0;
+    border-radius: 2px;
+    border: 1px solid #D9D9D9;
+    background: #FFF;
+    padding: 4px 12px;
+    line-height: 100%;
+    font-size: 16px;
+}
+
+.products-header-search:focus {
+    outline: none;
+    border: 1px solid #D9D9D9;
+}
+
+.products-header-search::placeholder {
+    color: rgba(191, 191, 191, 1);
+    font-size: 16px;
+    font-weight: 400;
+}
+
+@media (max-width: 991px) {
+    .banner-item--title  {
+        max-width: 100%;
+    }
+
+    .banner-item--subtitle {
+        max-width: 100%;
+    }
 }
